Thêm index.html và các tệp liên quan để hiển thị form đăng nhập

--- a/index.html
+++ b/index.html
@@ -1,72 +1,26 @@
-import { formatDate, copyToClipboard } from './utils.js';
-
-let transactionList = [];
-
-export function initView(transactions) {
-  transactionList = transactions;
-}
-
-export function viewTransaction(index) {
-  const transaction = transactionList[index];
-  const modal = document.getElementById("transactionDetailModal");
-  const detailContent = document.getElementById("transactionDetailContent");
-
-  if (!modal || !detailContent) {
-    console.error("Lỗi: Không tìm thấy modal hoặc nội dung chi tiết");
-    return;
-  }
-
-  detailContent.innerHTML = "";
-
-  const fields = [
-    { label: "Mã giao dịch", value: transaction.transactionId, showCopy: true },
-    { label: "Ngày giao dịch", value: formatDate(transaction.transactionDate), showCopy: false },
-    { label: "Loại giao dịch", value: transaction.transactionType, showCopy: false },
-    { label: "Tên khách hàng", value: transaction.customerName, showCopy: false },
-    { label: "Email", value: transaction.customerEmail, showCopy: true },
-    { label: "Liên hệ", value: transaction.customerPhone, showCopy: true },
-    { label: "Số tháng đăng ký", value: transaction.duration, showCopy: false },
-    { label: "Ngày bắt đầu", value: formatDate(transaction.startDate), showCopy: false },
-    { label: "Ngày kết thúc", value: formatDate(transaction.endDate), showCopy: false },
-    { label: "Số thiết bị", value: transaction.deviceCount, showCopy: false },
-    { label: "Tên phần mềm", value: transaction.softwareName, showCopy: false },
-    { label: "Gói phần mềm", value: transaction.softwarePackage, showCopy: false },
-    { label: "Tên tài khoản", value: transaction.accountName || "", showCopy: false },
-    { label: "ID Sheet Tài Khoản", value: transaction.accountSheetId || "", showCopy: false },
-    { label: "Thông tin đơn hàng", value: transaction.orderInfo || "", showCopy: true },
-    { label: "Doanh thu", value: transaction.revenue, showCopy: false },
-    { label: "Ghi chú", value: transaction.note, showCopy: false },
-    { label: "Tên nhân viên", value: transaction.tenNhanVien, showCopy: false },
-    { label: "Mã nhân viên", value: transaction.maNhanVien, showCopy: false }
-  ];
-
-  fields.forEach(field => {
-    const row = document.createElement("div");
-    row.className = "detail-row";
-    row.innerHTML = `
-      <span class="detail-label">${field.label}:</span>
-      <span class="detail-value">${field.value}</span>
-      ${field.showCopy ? '<i class="fas fa-copy copy-icon"></i>' : ''}
-    `;
-    detailContent.appendChild(row);
-
-    if (field.showCopy) {
-      const copyIcon = row.querySelector(".copy-icon");
-      copyIcon.addEventListener("click", () => copyToClipboard(field.value, copyIcon));
-    }
-  });
-
-  modal.style.display = "block";
-
-  modal.addEventListener("click", function handler(event) {
-    if (event.target === modal) {
-      closeModal();
-      modal.removeEventListener("click", handler);
-    }
-  });
-}
-
-export function closeModal() {
-  const modal = document.getElementById("transactionDetailModal");
-  modal.style.display = "none";
-}
+<!DOCTYPE html>
+<html lang="vi">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="Content-Security-Policy" content="default-src 'none'; style-src 'unsafe-inline'; img-src data:; connect-src 'self'">
+  <title>Đăng nhập</title>
+  <link rel="stylesheet" href="css/style.css">
+</head>
+<body class="login-page">
+  <div class="login-container">
+    <h2>Đăng nhập hệ thống</h2>
+    <form id="loginForm">
+      <input type="text" id="employeeCode" placeholder="Mã nhân viên" required>
+      <div class="password-container">
+        <input type="password" id="password" placeholder="Mật khẩu" required>
+        <span class="toggle-password" onclick="togglePassword()">👁️</span>
+      </div>
+      <button type="submit">Đăng nhập</button>
+      <p id="errorMessage" class="error"></p>
+    </form>
+  </div>
+  <script src="js/constants.js"></script>
+  <script src="js/login.js"></script>
+</body>
+</html>
