--- a/index.html
+++ b/index.html
@@ -1,432 +1,22 @@
 <!DOCTYPE html>
 <html lang="vi">
 <head>
-  <meta charset="UTF-8" />
-  <title>Quản lý giao dịch</title>
-  <link rel="stylesheet" href="css/style.css" />
-  <!-- Thêm Flatpickr CSS -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
-  <!-- Thêm Font Awesome cho icon lịch, icon copy, icon đăng xuất và icon kính lúp -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-  <style>
-    .date-input-container {
-      position: relative;
-      display: flex;
-      align-items: center;
-    }
-    .date-input-container input {
-      width: 100%;
-      padding-right: 30px;
-    }
-    .date-input-container .calendar-icon {
-      position: absolute;
-      right: 5px;
-      cursor: pointer;
-      color: #007bff;
-    }
-
-    .modal {
-      display: none;
-      position: fixed;
-      z-index: 100;
-      left: 0;
-      top: 0;
-      width: 100%;
-      height: 100%;
-      overflow: auto;
-      background-color: rgba(0, 0, 0, 0.4);
-    }
-
-    .modal-content {
-      background-color: #fefefe;
-      margin: 5% auto;
-      padding: 20px;
-      border: 1px solid #888;
-      width: 90%;
-      max-width: 600px;
-      border-radius: 10px;
-      position: relative;
-    }
-
-    .close {
-      color: #aaa;
-      float: right;
-      font-size: 28px;
-      font-weight: bold;
-      cursor: pointer;
-    }
-
-    .close:hover,
-    .close:focus {
-      color: black;
-      text-decoration: none;
-    }
-
-    .detail-content {
-      margin-top: 20px;
-      font-size: 14px;
-    }
-
-    .detail-content .detail-row {
-      display: flex;
-      align-items: center;
-      padding: 8px 0;
-      border-bottom: 1px solid #ddd;
-    }
-
-    .detail-content .detail-row:last-child {
-      border-bottom: none;
-    }
-
-    .detail-content .detail-label {
-      font-weight: bold;
-      margin-right: 10px;
-    }
-
-    .detail-content .detail-value {
-      flex: 1;
-    }
-
-    .detail-content .copy-icon {
-      margin-left: 10px;
-      cursor: pointer;
-      color: #007bff;
-      position: relative;
-    }
-
-    .detail-content .copy-icon:hover {
-      color: #0056b3;
-    }
-
-    .copy-message {
-      position: absolute;
-      left: 100%;
-      margin-left: 10px;
-      color: #28a745;
-      font-size: 12px;
-      opacity: 0;
-      transition: opacity 0.3s ease;
-    }
-
-    .copy-message.show {
-      opacity: 1;
-    }
-
-    .container {
-      padding-bottom: 20px;
-      position: relative;
-    }
-
-    .fixed-header {
-      position: sticky;
-      top: 0;
-      z-index: 10;
-      background-color: #fff;
-    }
-
-    #transactionTable {
-      width: 100%;
-      border-collapse: collapse;
-      margin-top: 10px;
-    }
-
-    #transactionTable thead {
-      position: sticky;
-      top: 0;
-      z-index: 10;
-      background-color: #007bff;
-      color: white;
-    }
-
-    #transactionTable th,
-    #transactionTable td {
-      border: 1px solid #ddd;
-      padding: 8px;
-      text-align: left;
-    }
-
-    #transactionTable tbody {
-      display: block;
-      max-height: 400px;
-      overflow-y: auto;
-    }
-
-    #transactionTable thead,
-    #transactionTable tbody tr {
-      display: table;
-      width: 100%;
-      table-layout: fixed;
-    }
-
-    #transactionTable tbody tr:nth-child(even) {
-      background-color: #f9f9f9;
-    }
-
-    .logout-btn {
-      position: absolute;
-      top: 10px;
-      right: 10px;
-      background-color: #dc3545;
-      color: white;
-      border: none;
-      padding: 8px 16px;
-      border-radius: 5px;
-      cursor: pointer;
-      display: flex;
-      align-items: center;
-      z-index: 20;
-    }
-
-    .logout-btn:hover {
-      background-color: #c82333;
-    }
-
-    .logout-btn i {
-      margin-right: 5px;
-    }
-
-    /* CSS để in nghiêng các tùy chọn không khả dụng */
-    option.unavailable {
-      font-style: italic;
-      color: #888;
-    }
-
-    /* CSS cho icon kính lúp */
-    .search-icon-container {
-      position: relative;
-      display: flex;
-      align-items: center;
-    }
-    .search-icon-container input {
-      width: 100%;
-      padding-right: 30px;
-    }
-    .search-icon-container .search-icon {
-      position: absolute;
-      right: 5px;
-      cursor: pointer;
-      color: #007bff;
-    }
-
-    /* CSS cho placeholder "Đang tìm kiếm..." */
-    input[placeholder="Đang tìm kiếm..."] {
-      font-style: italic;
-      color: #888;
-      opacity: 0.7;
-    }
-
-    /* Định dạng mặc định cho các trường input */
-    input[type="text"],
-    input[type="email"],
-    input[type="number"],
-    textarea {
-      font-style: normal;
-      color: #000;
-      opacity: 1;
-    }
-
-    /* CSS cho thông báo */
-    #notification {
-      margin: 10px 0;
-      padding: 10px;
-      border-radius: 5px;
-      display: none;
-    }
-    #notification.success {
-      background-color: #d4edda;
-      color: #155724;
-    }
-    #notification.error {
-      background-color: #f8d7da;
-      color: #721c24;
-    }
-  </style>
+  <meta charset="UTF-8">
+  <title>Đăng nhập</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
-  <div class="container">
-    <button class="logout-btn" onclick="logout()">
-      <i class="fas fa-sign-out-alt"></i> Đăng xuất
-    </button>
-
-    <h1>Hệ thống quản lý</h1>
-    <p id="welcome"></p>
-    <hr>
-
-    <form id="transactionForm" class="form-grid fixed-header" onreset="handleReset()">
-      <!-- Dòng 1 -->
-      <div>
-        <label>Ngày giao dịch:</label>
-        <div class="date-input-container">
-          <input type="text" id="transactionDate" placeholder="yyyy/mm/dd">
-          <i class="fas fa-calendar-alt calendar-icon" onclick="openCalendar('transactionDate')"></i>
-        </div>
-      </div>
-
-      <div>
-        <label>Loại giao dịch:</label>
-        <select id="transactionType" required>
-          <option value="">-- Chọn loại --</option>
-          <option value="Bán hàng">Bán hàng</option>
-          <option value="Hoàn Tiền">Hoàn Tiền</option>
-          <option value="Dùng thử">Dùng thử</option>
-          <option value="Nhập hàng">Nhập hàng</option>
-        </select>
-      </div>
-
-      <div>
-        <label>Email:</label>
-        <input type="email" id="customerEmail">
-      </div>
-
-      <div>
-        <label>Tên khách hàng:</label>
-        <div class="search-icon-container">
-          <input type="text" id="customerName">
-          <i class="fas fa-search search-icon" onclick="updateCustomerInfo()"></i>
-        </div>
-      </div>
-
-      <div>
-        <label>Liên hệ:</label>
-        <input type="text" id="customerPhone">
-      </div>
-
-      <!-- Dòng 2 -->
-      <div>
-        <label>Số tháng đăng ký:</label>
-        <input type="number" id="duration">
-      </div>
-
-      <div>
-        <label>Ngày bắt đầu:</label>
-        <div class="date-input-container">
-          <input type="text" id="startDate" placeholder="yyyy/mm/dd">
-          <i class="fas fa-calendar-alt calendar-icon" onclick="openCalendar('startDate')"></i>
-        </div>
-      </div>
-
-      <div>
-        <label>Ngày kết thúc:</label>
-        <div class="date-input-container">
-          <input type="text" id="endDate" placeholder="yyyy/mm/dd">
-          <i class="fas fa-calendar-alt calendar-icon" onclick="openCalendar('endDate')"></i>
-        </div>
-      </div>
-
-      <div>
-        <label>Số thiết bị:</label>
-        <input type="number" id="deviceCount">
-      </div>
-
-      <div>
-        <label>Ghi chú:</label>
-        <textarea id="note" rows="2"></textarea>
-      </div>
-
-      <!-- Dòng 3 -->
-      <div>
-        <label>Tên phần mềm:</label>
-        <select id="softwareName">
-          <option value="">-- Chọn phần mềm --</option>
-        </select>
-      </div>
-
-      <div>
-        <label>Gói phần mềm:</label>
-        <select id="softwarePackage">
-          <option value="">-- Chọn gói --</option>
-        </select>
-      </div>
-
-      <div>
-        <label>Tên tài khoản:</label>
-        <select id="accountName">
-          <option value="">-- Chọn tài khoản --</option>
-        </select>
-      </div>
-
-      <div>
-        <label>Doanh thu:</label>
-        <input type="number" id="revenue">
-      </div>
-
-      <!-- Dòng 4: Các nút -->
-      <div class="button-row">
-        <button type="button" onclick="handleAdd()">Thêm</button>
-        <button type="button" onclick="handleUpdate()">Cập nhật</button>
-        <button type="button" onclick="handleSearch()">Tìm kiếm</button>
-        <button type="reset">Làm mới</button>
-      </div>
-    </form>
-
-    <!-- Khu vực thông báo -->
-    <div id="notification"></div>
-
-    <h2 class="fixed-header">Danh sách giao dịch</h2>
-    <div class="pagination fixed-header" id="pagination">
+<body class="login-page">
+  <div class="login-container">
+    <h2>Đăng nhập hệ thống</h2>
+    <input type="text" id="employeeCode" placeholder="Mã nhân viên">
+    <div class="password-container">
+      <input type="password" id="password" placeholder="Mật khẩu">
+      <span class="toggle-password" onclick="togglePassword()">👁️</span>
     </div>
-
-    <table id="transactionTable">
-      <thead>
-        <tr>
-          <th>Mã giao dịch</th>
-          <th>Ngày giao dịch</th>
-          <th>Loại giao dịch</th>
-          <th>Tên khách hàng</th>
-          <th>Email</th>
-          <th>Số tháng đăng ký</th>
-          <th>Ngày bắt đầu</th>
-          <th>Ngày kết thúc</th>
-          <th>Số thiết bị</th>
-          <th>Tên phần mềm</th>
-          <th>Gói phần mềm</th>
-          <th>Tên tài khoản</th>
-          <th>Doanh thu</th>
-          <th>Tên nhân viên</th>
-          <th>Hành động</th>
-        </tr>
-      </thead>
-      <tbody>
-      </tbody>
-    </table>
-
-    <!-- Modal để hiển thị chi tiết giao dịch -->
-    <div id="transactionDetailModal" class="modal">
-      <div class="modal-content">
-        <span class="close" onclick="closeModal()">×</span>
-        <h2>Chi tiết giao dịch</h2>
-        <div class="detail-content" id="transactionDetailContent"></div>
-      </div>
-    </div>
-
-    <!-- Modal để hiển thị thông báo xử lý -->
-    <div id="processingModal" class="modal">
-      <div class="modal-content">
-        <h2 id="modalTitle">Thông báo</h2>
-        <p id="modalMessage">Hệ thống đang thực thi...</p>
-        <span id="modalClose" class="close" style="display: none;" onclick="closeProcessingModal()">×</span>
-      </div>
-    </div>
-
-    <!-- Modal xác nhận xóa -->
-    <div id="confirmDeleteModal" class="modal">
-      <div class="modal-content">
-        <span class="close" onclick="closeConfirmModal()">×</span>
-        <h2>Xác nhận xóa</h2>
-        <p id="confirmMessage"></p>
-        <div style="text-align: center;">
-          <button onclick="confirmDelete(true)">OK</button>
-          <button onclick="confirmDelete(false)">Cancel</button>
-        </div>
-      </div>
-    </div>
-
-    <p id="successMessage"></p>
-    <p id="errorMessage"></p>
+    <button onclick="handleLogin()">Đăng nhập</button>
+    <p id="errorMessage" class="error"></p>
   </div>
-
-  <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
   <script src="js/constants.js"></script>
-  <script type="module" src="js/main.js"></script>
+  <script src="js/login.js"></script>
 </body>
 </html>
