tạo thư mục scripts

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <button onclick="handleLogin()">Đăng nhập</button>
     <p id="errorMessage" class="error"></p>
   </div>
-  <script src="js/constants.js"></script>
-  <script src="js/login.js"></script>
+  <script src="scripts/constants.js"></script>
+  <script src="scripts/login.js"></script>
 </body>
 </html>
