--- a/main.html
+++ b/main.html
@@ -426,7 +426,7 @@
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
-  <script src="js/constants.js"></script>
-  <script type="module" src="js/main.js"></script>
+  <script src="scripts/constants.js"></script>
+  <script type="module" src="scripts/main.js"></script>
 </body>
 </html>
