tạo thư mục scripts

--- a/main.html
+++ b/main.html
@@ -249,7 +249,11 @@
     </button>
 
     <h1>Hệ thống quản lý</h1>
-    <p id="welcome"></p>
+    <p id="welcome">
+      <span id="userWelcome"></span>
+      <span id="todayRevenue" style="float: right; font-weight: bold; color: green;"></span>
+    </p>
+    
     <hr>
 
     <form id="transactionForm" class="form-grid fixed-header" onreset="handleReset()">
