tạo thư mục scripts

--- a/main.html
+++ b/main.html
@@ -463,5 +463,14 @@
     </div>
   </div>
 </div>
+<!-- Lớp phủ ngăn tương tác -->
+<div id="formOverlay" style="
+  display: none;
+  position: fixed;
+  top: 0; left: 0; right: 0; bottom: 0;
+  background: rgba(0, 0, 0, 0.1);
+  z-index: 9999;
+  cursor: not-allowed;
+"></div>
 </body>
 </html>
