tạo thư mục scripts

--- a/main.html
+++ b/main.html
@@ -378,15 +378,13 @@
           <th>Loại giao dịch</th>
           <th>Tên khách hàng</th>
           <th>Email</th>
-          <th>Số tháng đăng ký</th>
+          <th>Số tháng</th>
           <th>Ngày bắt đầu</th>
           <th>Ngày kết thúc</th>
           <th>Số thiết bị</th>
-          <th>Tên phần mềm</th>
-          <th>Gói phần mềm</th>
-          <th>Tên tài khoản</th>
+          <th>Thông tin phần mềm</th>
           <th>Doanh thu</th>
-          <th>Tên nhân viên</th>
+          <th>Thông tin khác</th>
           <th>Hành động</th>
         </tr>
       </thead>
